apps/pgadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-pgadmin
  labels:
    istio-injection: enabled
