apps/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-app
  metadata: apps-pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      securityContext:
        fsGroup: 5050
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /pgadmin4/config_local.py
              subPath: config_local.py
            - name: data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: config
          configMap:
            name: pgadmin-config
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin-data
