apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: apps-pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
